[package]
name = "duplicate_file_analyse"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"]}
walkdir = "2.5.0"
sha1 = "0.10.6"
hex = "0.4"
num_cpus = "1.16.0"
log = "0.4.25"
env_logger = "0.10"
log4rs = "1.2"
rayon = "1.10.0"
dashmap = "6.1.0"
chrono = "0.4.39"
serde_json = "1.0.137"
